# Proyecto_Inventario

./: Proyecto alse.docx  README.md
P_Alse/: CMakeLists.txt  P_Alse_es_CO.ts  alertstab.cpp  alertstab.h  component.cpp  component.h  databasemanager.cpp  databasemanager.h  inventorymanager.cpp  inventorymanager.h  inventorytab.cpp  inventorytab.h  main.cpp  mainwindow.cpp  mainwindow.h  reportgenerator.cpp  reportgenerator.h  reportstab.cpp  reportstab.h  searchtab.cpp  searchtab.h
P_Alse/html/: alertstab_8cpp.html  alertstab_8cpp__incl.map  alertstab_8cpp__incl.md5  alertstab_8h.html  alertstab_8h__dep__incl.map  alertstab_8h__dep__incl.md5  alertstab_8h__incl.map  alertstab_8h__incl.md5  alertstab_8h_source.html  annotated.html  classAlertsTab-members.html  classAlertsTab.html  classAlertsTab__coll__graph.md5  classAlertsTab__inherit__graph.map  classComponent-members.html  classComponent.html  classDatabaseManager-members.html  classDatabaseManager.html  classInventoryManager-members.html  classInventoryManager.html  classInventoryTab-members.html  classInventoryTab.html  classInventoryTab__coll__graph.md5  classInventoryTab__inherit__graph.map  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__inherit__graph.md5  classReportGenerator-members.html  classReportGenerator.html  classReportGenerator__coll__graph.map  classReportGenerator__inherit__graph.md5  classReportTab-members.html  classReportTab.html  classReportTab__coll__graph.map  classReportTab__coll__graph.md5  classSearchTab-members.html  classSearchTab.html  classSearchTab__coll__graph.md5  classSearchTab__inherit__graph.map  classes.html  (+50 more)
P_Alse/latex/: alertstab_8cpp.tex  alertstab_8cpp__incl.md5  alertstab_8h.tex  alertstab_8h__dep__incl.md5  alertstab_8h__incl.md5  alertstab_8h_source.tex  annotated.tex  classAlertsTab.tex  classAlertsTab__inherit__graph.md5  classComponent.tex  classDatabaseManager.tex  (+37 more)
(+24 files in other folders)
